Fixed image not showing

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -18,12 +18,13 @@ nav {
 
   img {
     height: 50px;
-    padding: 40px;
+    margin: 40px;
+    background: cyan;
   }
 
   .MenuIcon {
     height: 30px;
-    padding: 40px 40px 40px 0;
+    margin: 40px 40px 40px 0;
   }
 
   div {
